--- a/index.html
+++ b/index.html
@@ -10,6 +10,64 @@
 </head>
 <body>
    
+    <div class="nav_site">
+        <div class="container">
+            /*左浮动列表*/
+            <ul class="fl">
+                <li class="fl"><a href="javascript:;" class="nav_site_login">亲，请登录</a></li>
+                <li class="fl"><a href="javascript:;" class="nav_site_signup link">免费注册</a></li>
+                <li class="fl"><a href="#" target="_blank" class="nav_site_mobile link">手机逛慕淘</a></li>
+            </ul>
+            /*右浮动列表*/
+            <ul class="fr">
+                    /*我的慕淘*/
+                    <li class="fl dropdown">
+                        /*切换按钮+下拉箭头*/
+                        <a href="#" class="dropdown_toggle link">我的慕淘 <i class="dropdown_arrow"></i></a>
+                        /*下拉菜单*/
+                        <ul class="dropdown_layer dropdown_left">
+                            <li><a href="#" target="_blank" class="dropdown_item">已买到宝贝</a></li>
+                            <li><a href="#" target="_blank" class="dropdown_item">我的足迹</a></li>
+                        </ul>
+                    </li>
+                    /*收藏夹*/
+                    <li class="fl dropdown">
+                            /*切换按钮+下拉箭头*/
+                            <a href="#" class="dropdown_toggle link">收藏夹 <i class="dropdown_arrow"></i></a>
+                            /*下拉菜单*/
+                            <ul class="dropdown_layer dropdown_left">
+                                <li><a href="#" target="_blank" class="dropdown_item">xxx</a></li>
+                                <li><a href="#" target="_blank" class="dropdown_item">xxx</a></li>
+                            </ul>
+                    </li>
+                    /*商品分类*/
+                    <li class="fl"><a href="#" target="_blank" class="nav_site_category link">商品分类</a></li>
+                    /*卖家中心*/
+                    <li class="fl dropdown">
+                        /*切换按钮+下拉箭头*/
+                        <a href="#" class="dropdown_toggle link">卖家中心 <i class="dropdown_arrow"></i></a>
+                        /*下拉菜单*/
+                        <ul class="dropdown_layer dropdown_left">
+                            <li><a href="#" target="_blank" class="dropdown_item">xxx</a></li>
+                            <li><a href="#" target="_blank" class="dropdown_item">xxx</a></li>
+                        </ul>
+                    </li>
+                    /*联系客服*/
+                    <li class="fl dropdown nav_site_service">
+                        /*切换按钮+下拉箭头*/
+                        <a href="#" class="dropdown_toggle link">联系客服 <i class="dropdown_arrow"></i></a>
+                        /*下拉菜单*/
+                        <ul class="dropdown_layer dropdown_right">
+                            <li><a href="#" target="_blank" class="dropdown_item">xxx</a></li>
+                            <li><a href="#" target="_blank" class="dropdown_item">xxx</a></li>
+                        </ul>
+                    </li>
+                </ul>
+        </div>
+    </div>
+
+
+
     <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="js/index.js"></script>
 </body>
